Modifed views and public

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,17 @@
-<div class="page-header">
-<h3>Main</h3>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>BookNook</title>
+	<script type="text/javascript" src="/vendor/jquery/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src="/vendor/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/javascript/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="/vendor/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/index.css">
+	<link rel="stylesheet" type="text/css" href="/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+</head>
+
+
+{{{body}}}
+
+
+</html>
