--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,79 @@
-<div class="page-header">
-<h3>Home</h3>
+<body id="homeBody">
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+  <div class="navbar-header">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    <a class="navbar-brand"><i class="fa fa-book"></i>BookNook</a>
+  </div>
+  <div class="collapse navbar-collapse">
+    <ul class="nav navbar-nav navbar-right">
+      <li class="login"><a href="#">Login</a></li>
+      <li class="signUp"><a href="#">Sign Up</a></li>
+    </ul>
+  </div>
+
 </div>
+</nav>
+  <!-- Modal for login -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Login to your BookNook Account!</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="inputEmail">Email Address</label>
+            <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Password"><p></p>
+            <input type="submit" class="btn btn-success btn-block form-control" name="submit">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <p>Dont have an account? <button class="btn btn-primary signUp">Sign Up!</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal for login end -->
+
+<!-- Modal for SignUp -->
+
+<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Sign Up for an AWESOME BookNook Account!<h4>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="inputFullName">Your Name</label>
+            <input type="text" class="form-control" name="fullName" placeholder="Full Name" id="inputFullName">
+            <label for="inputEmail">Email Address</label>
+            <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Password"><p></p>
+            <input type="submit" class="btn btn-success btn-block form-control" name="submit">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <p>Already have an acccount? <button class="btn btn-primary login">Login!</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal for SignUp end -->
+</body>
