Modified views and public - Still work in progress

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,10 @@
-<body>
+<body id="profilepage">
 
 <div class="leftSection">
   <div class="user"></div>
-  <p><a href="#">BookShelf</a></p>
+  <p><a href="#">Add Photo</a></p>
+  <p><a href="#">Edit Photo</a></p>
+  <p><a href="#">Upload Books</a></p>
 </div>
 
 <div class="rightSection">
@@ -42,10 +44,173 @@
 
       		</ul>
       	</div>
-	</div>
-
+        </div>
 
 </nav>
 
+  <div class="booksOwned">
+    <h2><br/>Books you own :</h2>
+
+
+
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+
+<p><a href="#">Upload Your Books!</a></p>
+<hr>
+<h2>Books you may like :</h2>
+
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../../images/beachBook.jpg" alt="">
+            <div class="overlay">
+                <h2>Name of Book</h2>
+        <p> 
+          <a href="#">Remove Book</a>
+        </p>
+        <p>
+          <a href="#">Edit Book</a>
+        </p>
+            </div>
+    </div>
+</div>
 </div>
 </body>
