--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,61 @@
 html, body {
-	height: 100%;
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
  	background-size: cover;
+ 	font-family: 'Delius Unicase', cursive;
+ 	height:100%;
 }
 
-#homeBody {
+/*#homeBody {
 	background: url("../../images/girlReading.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
  	background-size: cover;
+}*/
+
+#jumbotron {
+	margin:auto;
+	border:1px solid red;
+}
+
+#page1 {
+		background: url("../../images/glassesbook.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+ 	background-size: cover;
+
+}
+
+#page1 .navbar {
+	background:transparent;
+	border:none;
+}
+
+#page2 {
+	height: auto;
+background: #5f2c82; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #5f2c82 , #49a09d); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #5f2c82 , #49a09d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                
+}
+
+#profilepage {
+	background: #DAE2F8; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to left, #DAE2F8 , #D6A4A4); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #DAE2F8 , #D6A4A4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	width:auto;
+}
+
+.navbar-default .navbar-nav > li > a {
+	color:white;
+}
+
+.navbar-default .navbar-brand {
+	color:white;
+	font-size: 30px;
 }
 
 .modal-title {
@@ -28,8 +72,10 @@ html, body {
   background-position: center center;
   background-size: cover;
   background: rgb(208, 209, 204);
-  margin-left: 60px;
-  margin-top: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
 }
 
 .leftSection {
@@ -37,6 +83,12 @@ html, body {
 	height:100%;
 	border-right: 2px solid black;
 	float:left;
+
+
+background: #4b6cb7; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #4b6cb7 , #182848); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #4b6cb7 , #182848); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+         
 }
 
 .leftSection p {
@@ -46,7 +98,50 @@ html, body {
 .rightSection {
 	width:80%;
 	float: right;
-	height: 100%;
+	height: auto;
+	background: #DAE2F8; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to left, #DAE2F8 , #D6A4A4); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #DAE2F8 , #D6A4A4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+hr {
+	border:1px solid red;
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+hr:before { /* Not really supposed to work, but does */
+    display: block;
+    content: "";
+    height: 30px;
+    margin-top: -31px;
+    border-style: solid;
+    border-color: black;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
+}
+
+.rightSection nav {
+	background:transparent;
+	border:none;
+}
+
+.booksOwned h2 {
+	padding-left: 20px;
+}
+
+.booksOwned img {
+	width:300px;
+	height:300px;
+	margin-left:20px;
+	margin-bottom: 10px;
+}
+
+.section {
+	height:100%;
 }
 
 .buttons {
@@ -57,6 +152,169 @@ html, body {
 	float: right;
 }
 
+.jumbotron {
+	background-color: rgba(30,30,30,0.8);
+	text-align: center;
+	color:white;
+	height:320px;
+}
+
+.input-group {
+	width:700px;
+	margin-left: 140px;
+	margin-top:40px;
+}
+
+.arrow-footer{
+	font-size: 150px;
+	text-align: center;
+	color:white;
+	position:absolute;
+    bottom:0;
+    width:100%;
+}
+
+.arrow-footer p {
+	font-size: 30px;
+	margin-bottom: -70px;
+}
+
+.thumbnail {
+    height: 100%;
+    display: inline-block;
+}
+
+.thumbnail img {
+	max-width:100%;
+	max-height:100%;
+
+}
+
+
+
+@-webkit-keyframes test-hover {
+  to {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+@keyframes test-hover {
+  to {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+.test-hover {
+	  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+}
+
+.test-hover:hover, .test-hover:focus, .test-hover:active {
+	  -webkit-animation-name: test-hover;
+  animation-name: test-hover;
+  -webkit-animation-duration: 0.3s;
+  animation-duration: 0.5s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+
+.second-page {
+	height:100%;
+}
+
 li {
 	padding-right: 10px;
+}
+
+
+
+
+
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+}
+
+.hovereffect .overlay {
+  position: absolute;
+  overflow: hidden;
+  width: 80%;
+  height: 80%;
+  left: 10%;
+  top: 10%;
+  border-bottom: 1px solid #FFF;
+  border-top: 1px solid #FFF;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(0,1);
+  -ms-transform: scale(0,1);
+  transform: scale(0,1);
+}
+
+.hovereffect:hover .overlay {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.hovereffect:hover img {
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
+  filter: brightness(0.6);
+  -webkit-filter: brightness(0.6);
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  background-color: transparent;
+  color: #FFF;
+  padding: 1em 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,-100%,0);
+  transform: translate3d(0,-100%,0);
+}
+
+.hovereffect a, hovereffect p {
+  color: #FFF;
+  padding: 1em 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,100%,0);
+  transform: translate3d(0,100%,0);
+}
+
+.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
